  function.

- The fall-back function for converting time into a string in strftime()
  now calls itself for the "%c", "%x" and "%X" format specifiers.

- mktime() is supposed to convert the time specification, given as local
  time, into the number of seconds since January 1st, 1970, relative to
  UTC. This didn't really work up until now since the time value returned
  was given as local time.


c.lib 1.186 (14.1.2005)

- Redirecting stderr to a file no longer has the effect of showing error
  messages and assertion failure notifications as requesters. The exception
  is in redirecting stderr to NIL: which will prompt the requester use.

- gettimeofday() now calls GetSysTime() rather than DateStamp() to obtain
  the current system time. This resolves granularity issues since the
  DateStamp() result was only accurate by 1/50 of a second.

- The "ptrdiff_t" definition in <stddef.h> now defaults to type 'int' rather
  than 'long int'.

- The "char" limits in <limits.h> are now set up according to the current
  compiler settings, which can either default to an unsigned or
  signed definition.

- Changed the rules again for the use of stderr/stdout redirection when
  printing error messages. It is always safe to redirect them now and
  no requester will appear unless you specifically set the value of the
  "__no_standard_io" variable to TRUE in your program.

- Removed a misplaced IsInteractive() from the stdio initialization
  function. Now this could have been big trouble...

- Removed tests for FileHandle->fh_Type != NULL which used to precede
  all IsInterative() tests. I verified that IsInteractive() will always
  return FALSE for NIL: type file handles.

- Dropped the special flag variable used by the abort() function that
  tracks whether or not console output is possible. We now use the
  global "__no_standard_io" instead.

- Made the <ctype.h> macros more robust.

- Removed the "NIL:" file handle tests preceding the Open("CONSOLE:",..)