@@ -95,6 +95,7 @@ extern char * __asctime_r(const struct tm *tm,char * buffer,size_t buffer_size);
 extern char * __number_to_string(unsigned int number,char * string,size_t max_len,size_t min_len);
 extern struct tm * __convert_time(ULONG seconds, LONG gmt_offset, struct tm * tm);
 extern time_t __convert_datestamp_to_time(const struct DateStamp * ds);
+extern int __calculate_weekday(int year,int month,int day);
 
 /****************************************************************************/
 
